Added sha-256,512 and md5 hashing methods

--- a/Cryptography/Cryptography.csproj
+++ b/Cryptography/Cryptography.csproj
@@ -7,10 +7,12 @@
 
   <ItemGroup>
     <Compile Remove="Program.cs" />
+    <Compile Remove="RandomNumbers\RandomNum.cs" />
   </ItemGroup>
 
   <ItemGroup>
     <None Include="Program.cs" />
+    <None Include="RandomNumbers\RandomNum.cs" />
   </ItemGroup>
 
 </Project>
